--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -63,6 +63,7 @@ nav > .login > button:hover{
 
 .container{
     margin-left: 130px;
+    position: relative;
 }
 
 .container > .bodyText{
@@ -72,6 +73,7 @@ nav > .login > button:hover{
 
 .card{
     display: flex;
+    margin-bottom: 140px;
 }
 
 .bodyText > .title > h1{
@@ -111,6 +113,9 @@ nav > .login > button:hover{
     padding: 35px;
     width: 90%;
     border-radius: 10px;
+    position: absolute;
+    bottom: -200px;
+    right: calc(50% - 600px);
 }
 
 .inputUrl > .formInput{
@@ -142,8 +147,27 @@ nav > .login > button:hover{
 }
 
 #statics{
+    display: flex;
+    justify-content: center;
     background-color: #eff1f7;
     min-height: 600px;
+    padding: 60px 130px;
+}
+
+.boxUrl{
+    margin-top: 20px;
+}
+
+.boxUrl > .shortUrl {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: hsl(257, 7%, 63%);
+    padding: 10px;
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 20px;
+    gap: 300px;
 }
 
 #statics > .container > .text{
